--- a/notebooks/sql_editor.ipynb
+++ b/notebooks/sql_editor.ipynb
@@ -289,6 +289,155 @@
     "WHERE v.id = c.id\n",
     "  AND v.id IN (118, 119);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a27a51ae",
+   "metadata": {},
+   "source": [
+    "Replacing Nulls with zero(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbabf9e7",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "UPDATE public.property_management_raw_v1\n",
+    "SET \n",
+    "  total_billed = CASE WHEN total_billed IS NULL OR total_billed = 'NULL' OR total_billed = '' THEN '0' ELSE total_billed END,\n",
+    "  total_paid = CASE WHEN total_paid IS NULL OR total_paid = 'NULL' OR total_paid = '' THEN '0' ELSE total_paid END,\n",
+    "  total_outstanding = CASE WHEN total_outstanding IS NULL OR total_outstanding = 'NULL' OR total_outstanding = '' THEN '0' ELSE total_outstanding END,\n",
+    "  total_expenses = CASE WHEN total_expenses IS NULL OR total_expenses = 'NULL' OR total_expenses = '' THEN '0' ELSE total_expenses END,\n",
+    "  total_expenses_paid = CASE WHEN total_expenses_paid IS NULL OR total_expenses_paid = 'NULL' OR total_expenses_paid = '' THEN '0' ELSE total_expenses_paid END;\n",
+    "\n",
+    "-- Step 2: Replace NULL strings and actual NULLs with zero for numeric columns\n",
+    "UPDATE public.property_management_raw_v1\n",
+    "SET \n",
+    "  total_units = CASE WHEN total_units IS NULL OR total_units = 'NULL' OR total_units = '' THEN '0' ELSE total_units END,\n",
+    "  total_unit_space = CASE WHEN total_unit_space IS NULL OR total_unit_space = 'NULL' OR total_unit_space = '' THEN '0' ELSE total_unit_space END,\n",
+    "  total_tenants = CASE WHEN total_tenants IS NULL OR total_tenants = 'NULL' OR total_tenants = '' THEN '0' ELSE total_tenants END,\n",
+    "  active_tenants = CASE WHEN active_tenants IS NULL OR active_tenants = 'NULL' OR active_tenants = '' THEN '0' ELSE active_tenants END;\n",
+    "\n",
+    "-- Step 3: Change data types for currency columns (2 decimal places)\n",
+    "ALTER TABLE public.property_management_raw_v1\n",
+    "  ALTER COLUMN total_billed TYPE NUMERIC(15,2) USING total_billed::NUMERIC(15,2),\n",
+    "  ALTER COLUMN total_paid TYPE NUMERIC(15,2) USING total_paid::NUMERIC(15,2),\n",
+    "  ALTER COLUMN total_outstanding TYPE NUMERIC(15,2) USING total_outstanding::NUMERIC(15,2),\n",
+    "  ALTER COLUMN total_expenses TYPE NUMERIC(15,2) USING total_expenses::NUMERIC(15,2),\n",
+    "  ALTER COLUMN total_expenses_paid TYPE NUMERIC(15,2) USING total_expenses_paid::NUMERIC(15,2);\n",
+    "\n",
+    "-- Step 4: Change data types for integer columns\n",
+    "ALTER TABLE public.property_management_raw_v1\n",
+    "  ALTER COLUMN total_units TYPE INTEGER USING total_units::INTEGER,\n",
+    "  ALTER COLUMN total_tenants TYPE INTEGER USING total_tenants::INTEGER,\n",
+    "  ALTER COLUMN active_tenants TYPE INTEGER USING active_tenants::INTEGER;\n",
+    "\n",
+    "-- Step 5: Change total_unit_space to NUMERIC (assuming it might have decimals for square footage)\n",
+    "ALTER TABLE public.property_management_raw_v1\n",
+    "  ALTER COLUMN total_unit_space TYPE NUMERIC(12,2) USING total_unit_space::NUMERIC(12,2);\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38f9c4e6",
+   "metadata": {},
+   "source": [
+    "Type change from text to timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f270520f",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ALTER TABLE property_management_raw_v2\n",
+    "ALTER COLUMN latest_tenant_end TYPE TIMESTAMP\n",
+    "USING NULLIF(NULLIF(latest_tenant_end, 'NULL'), '')::TIMESTAMP;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45916759",
+   "metadata": {},
+   "source": [
+    "Collection rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed211dab",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT \n",
+    "    property_id,\n",
+    "    property_status,\n",
+    "    property_name,\n",
+    "    property_team_name,\n",
+    "    total_tenant_billed,\n",
+    "    total_collected,\n",
+    "    CASE \n",
+    "        WHEN COALESCE(total_tenant_billed, 0) = 0 THEN 0\n",
+    "        ELSE ROUND((COALESCE(total_collected, 0) / COALESCE(total_tenant_billed, 0)) * 100, 2)\n",
+    "    END AS collection_rate_percentage\n",
+    "FROM property_management_raw_v2\n",
+    "WHERE property_status='Active'\n",
+    "ORDER BY collection_rate_percentage DESC;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "879fa0a1",
+   "metadata": {},
+   "source": [
+    "Collection rate by team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18e1ecaf",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT \n",
+    "    property_team_name,\n",
+    "    SUM(COALESCE(total_tenant_billed, 0)) AS total_billed,\n",
+    "    SUM(COALESCE(total_collected, 0)) AS total_collected,\n",
+    "    CASE \n",
+    "        WHEN SUM(COALESCE(total_tenant_billed, 0)) = 0 THEN 0\n",
+    "        ELSE ROUND(\n",
+    "            (SUM(COALESCE(total_collected, 0)) / SUM(COALESCE(total_tenant_billed, 0))) * 100, \n",
+    "            2\n",
+    "        )\n",
+    "    END AS collection_rate_percentage\n",
+    "FROM property_management_raw_v2\n",
+    "GROUP BY property_team_name\n",
+    "ORDER BY collection_rate_percentage DESC;"
+   ]
   }
  ],
  "metadata": {
