--- a/notebooks/sql_editor.ipynb
+++ b/notebooks/sql_editor.ipynb
@@ -438,6 +438,43 @@
     "GROUP BY property_team_name\n",
     "ORDER BY collection_rate_percentage DESC;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd33da30",
+   "metadata": {},
+   "source": [
+    "Collection rate by property type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc99ddf",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT \n",
+    "    property_type,\n",
+    "    COUNT(*) AS pf,\n",
+    "    SUM(COALESCE(total_tenant_billed, 0)) AS total_billed,\n",
+    "    SUM(COALESCE(total_collected, 0)) AS total_collected,\n",
+    "    CASE \n",
+    "        WHEN SUM(COALESCE(total_tenant_billed, 0)) = 0 THEN 0\n",
+    "        ELSE ROUND(\n",
+    "            (SUM(COALESCE(total_collected, 0)) / SUM(COALESCE(total_tenant_billed, 0))) * 100, \n",
+    "            2\n",
+    "        )\n",
+    "    END AS collection_rate_percentage\n",
+    "FROM property_management_clean_v3\n",
+    "WHERE property_status = 'Active'\n",
+    "GROUP BY property_type\n",
+    "ORDER BY collection_rate_percentage DESC;"
+   ]
   }
  ],
  "metadata": {
