--- a/notebooks/sql_editor.ipynb
+++ b/notebooks/sql_editor.ipynb
@@ -475,6 +475,33 @@
     "GROUP BY property_type\n",
     "ORDER BY collection_rate_percentage DESC;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a349b50",
+   "metadata": {},
+   "source": [
+    "Cumulative summary\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24684f78",
+   "metadata": {},
+   "source": [
+    "SELECT \n",
+    "    COUNT(*) AS total_properties,\n",
+    "    SUM(COALESCE(total_tenant_billed, 0)) AS total_billed,\n",
+    "    SUM(COALESCE(total_collected, 0)) AS total_collected,\n",
+    "    CASE \n",
+    "        WHEN SUM(COALESCE(total_tenant_billed, 0)) = 0 THEN 0\n",
+    "        ELSE ROUND(\n",
+    "            (SUM(COALESCE(total_collected, 0)) / SUM(COALESCE(total_tenant_billed, 0))) * 100,\n",
+    "            2\n",
+    "        )\n",
+    "    END AS total_collection_rate_percentage\n",
+    "FROM property_management_clean_v3;"
+   ]
   }
  ],
  "metadata": {
